fix tag loss with condstore servers, r=standard8, bug 678148